# cdptools

./: .gitignore  DIARY.md  README.md  allfiles.tar  cdptools.sln  darren@192.168.70.5  remote_build.sh
Windows/libcdp/: libcdp.vcxproj  libcdp.vcxproj.filters
cdptools/: buffer_stream.h  cdp.c  cdp.h  cdp_packet_parser.c  cdp_packet_parser.h  cdptools.vcxproj  cdptools.vcxproj.filters  cisco_hello_protocol.c  cisco_hello_protocol.h  ip_address_array.c  ip_address_array.h  ip_prefix.c  ip_prefix.h  ip_prefix_array.c  ip_prefix_array.h  main.c  main.cpp  platform.h  power_over_ethernet_availability.c  power_over_ethernet_availability.h  sample.h  stream_reader.c  stream_reader.h
daemon/: Makefile
libcdp/: buffer_stream.c  buffer_stream.d  buffer_stream.h  cdp_neighbor.c  cdp_neighbor.h  cdp_packet.c  cdp_packet.d  cdp_packet.h  cdp_packet_parser.c  cdp_packet_parser.d  cdp_packet_parser.h  cdp_software_version_string.h  cdp_software_version_string_linux.c  cdp_software_version_string_windows.c  cisco_cluster_management_protocol.c  cisco_cluster_management_protocol.h  cisco_hello_protocol.c  cisco_hello_protocol.d  cisco_hello_protocol.h  ecdptlv.h  ip_address_array.c  ip_address_array.d  ip_address_array.h  ip_prefix.c  ip_prefix.d  ip_prefix.h  ip_prefix_array.c  ip_prefix_array.d  ip_prefix_array.h  platform.h  platform_socket.h  power_over_ethernet_availability.c  power_over_ethernet_availability.d  power_over_ethernet_availability.h  stream_reader.c  stream_reader.d  stream_reader.h  stream_writer.c  stream_writer.h
libcdp.tests/: CMakeLists.txt  cdp_sample_data.h  libcdp.tests.vcxproj  test_cdp_packet.cpp  test_ip_address_array.cpp  test_software_version_string.cpp  test_stream_reader.cpp
libcdp/platform/: checksum.h  platform.h  socket.h  string.h  time.h  types.h  utsname.h
module/: Makefile  cdp_module.c  cdp_module.h  cdp_neighbor.c  cdp_neighbor.h  cdp_proc.c  cdp_proc.h  cdp_proc_detail.c  cdp_proc_json.c  cdp_proc_print_sockaddr.c  cdp_proc_summary.c  cdp_receive.c  cdp_receive.h  cdp_transmit.c  cdp_transmit.h
module/libcdp/: buffer_stream.c  cdp_packet.h  cdp_packet_parser.c  cisco_hello_protocol.h  ecdpnetworkduplex.h  ecdptlv.h  ip_address_array.h  ip_prefix.c  ip_prefix.h  platform.h  stream_reader.h
